# test-releases

./: .changelog-config.yaml  CHANGELOG.md  Dockerfile  GITHUB_OUTPUT  Makefile  pyproject.toml
.github/changelog_templates/: version_heading.md.jinja
.github/workflows/: release.yaml
the_package/: something.py
