[project]
name = "the_package"
description = "some package to test release process on"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "the_package.__version__"}

[tool.bumpversion]
current_version = "0.21.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "{new_version}"
message = "Version updated from {current_version} to {new_version}"
allow_dirty = true

[[tool.bumpversion.files]]
filename = "the_package/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "{current_version}...HEAD"
replace = "{current_version}...{new_version}"
